# deep-researcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  Makefile  README.md  pyproject.toml
.cursor/plans/: deep_researcher_implementation_ed8cd364.plan.md
.github/workflows/: ci.yml
app/: streamlit_app.py
scripts/: eval_suite.py  evaluate.py  seed_demo.py
src/deep_researcher/: __init__.py  cache.py  cli.py  config.py  eval.py  graph.py  llm.py  models.py  pipeline.py  preflight.py  prompts.py  scoring.py  state.py  telemetry.py
src/deep_researcher/agents/: __init__.py  common.py  critical_analysis.py  debate.py  dispatcher.py  judge.py  perspective.py  query_planner.py  report_builder.py  retriever.py  triage.py
src/deep_researcher/report/: __init__.py  templates.py
src/deep_researcher/tools/: __init__.py  extract.py  search.py
tests/: test_concurrency.py  test_dispatcher.py  test_eval.py  test_graph_smoke.py  test_hitl.py  test_judge.py  test_llm_fallback.py  test_models.py  test_preflight.py  test_query_planner.py  test_report.py  test_retriever.py  test_scoring.py  test_telemetry.py  test_triage_dedup.py
