[project]
name = "deep-researcher"
version = "0.1.0"
description = "Multi-Agent AI Deep Researcher — a stateful, graph-orchestrated pipeline that retrieves, debates, validates, and synthesizes research into a confidence-scored report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.7.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    "trafilatura>=1.12.0",
    "requests>=2.32.0",
    "resend>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
deep-researcher = "deep_researcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
